projet_gl/src/test/deca/syntax/invalid/opBool/invalidAnd.deca
// Description:
//    invalid test parser for binary expression (and).
//
// Resultats:
//    ligne 11 : token recognition error at: '& '
//
// Historique:
//    cree le 12/01/2024

{
   x & y;
}
